fix: 🐛 misalignments on home page

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   vertical-align: top;
   text-align: center;
+  padding-left: 30px;
 }
 
 .home-top-container h2 {
