--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
+
 /* Global styles */
 
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Open Sans", "Trebuchet MS", Helvetica, sans-serif;
+  font-family: 'Open Sans', 'Trebuchet MS', Helvetica, sans-serif;
 }
 
 body {
@@ -13,6 +14,9 @@ body {
 a {
   color: rgb(0, 110, 253);
   text-decoration: inherit;
+  /*:hover {
+    color: rgb(56, 56, 56);
+  }*/
 }
 
 li a {
@@ -35,20 +39,23 @@ h2 {
 
 /* Media */
 @media screen and (max-width: 599px) {
+
   .home-top-left-image {
     text-align: center !important;
+    padding-right: 55px;
   }
   .home-top-right h2 {
     text-align: center !important;
   }
+
   .home-top-right {
     position: relative;
-    left: 35px;
+    bottom: 40px;
   }
 
-    .home-bottom-text {
+  .home-bottom-text {
     position: relative;
-    bottom: 40px;
+    bottom: 100px;
   }
 }
 @media screen and (max-width: 540px) {
